--- a/src/components/FooterLinks.astro
+++ b/src/components/FooterLinks.astro
@@ -19,6 +19,9 @@ const { links, pdf, hide } = Astro.props;
   }
 </ul>
 <style>
+  ul {
+    list-style-type: none !important;
+  }
   li {
     margin-top: 1rem;
   }
