--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -33,6 +33,7 @@ const { mainLinks } = Astro.props;
   ul {
     display: flex;
     gap: 1.5rem;
+    list-style: none;
   }
   a {
     color: var(--text-main);
