--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -50,6 +50,7 @@ const { text, outlined, marginTop, wide, semiwide, fullWidth } = Astro.props;
     button {
       padding: 0.5rem 1rem;
       font-size: 0.75rem;
+      width: 100%;
     }
     .semiwide {
       padding: 0.75rem 2rem;
