--- a/src/pages/kupovina-grupnih-karata.astro
+++ b/src/pages/kupovina-grupnih-karata.astro
@@ -19,7 +19,7 @@ const remarkSecond =
 
 <Layout title="Zahtev za grupnu posetu">
   <h1>Zahtev za grupnu posetu</h1>
-  <form>
+  <!-- <form>
     <div class="grid-2">
       <Input type="date" label="Datum planirane posete:" />
       <Input type="time" label="Željeno vreme posete:" />
@@ -133,8 +133,8 @@ const remarkSecond =
     <p>NAPOMENA:</p>
     <p>{remarkSecond}</p>
     <Button text="Pošaljite zahtev" marginTop="4rem" wide />
-  </form>
-  <!-- <TicketsForm client:load/> -->
+  </form> -->
+  <TicketsForm client:load/>
 </Layout>
 <style>
   .grid-2,
