--- a/src/pages/zahtev-za-rucak.astro
+++ b/src/pages/zahtev-za-rucak.astro
@@ -1,14 +1,20 @@
 ---
 import Layout from '../layouts/Layout.astro'
-import Input from '../components/Input.astro'
-import ButtonCard from '../components/ButtonCard.astro'
+import MealForm from '../components/MealForm' 
+
+export type MenuItem = {
+  heading: string;
+  options: string[];
+  dropdowns: string[][];
+  prices: string[];
+};
 
 const paragraphes = [
   'Ukoliko imate potrebe za posebnim vrstama obroka ili druge napomene (alergije, verski obroci i sl.), molimo vas da napomenete.',
   'Podnošenje ovog zahteva istovremeno predstavlja i podnošenje zahteva za izradu e-fakture za pravno lice - podnosioca zahteva. To podrazumeva sledeću proceduru: evidencija prometa na fiskalnoj kasi, refundacija tog fiskalnog isečka u istom danu i izrada e-fakture sa istim datumom prometa i iznosom prometa. Procedura će se sprovoditi sve do trenutka kada se programski omogući da evidencija prometa na fiskalnoj kasi podrazumevai automatsku izradu e-fakture, odnosno dođe do drugih uputstava nadležnih državnih organa.',
 ]
 
-const meals = [
+const meals: MenuItem[] = [
   {
     heading: 'Dečiji dino obrok',
     options: [
@@ -74,46 +80,12 @@ const meals = [
 
 <Layout title="Zahtev za ručak u restoranu"
   ><h1>Zahtev za ručak u restoranu</h1>
-  <div class="grid grid-2">
-    <Input type="date" label="Datum obroka:" />
-    <Input type="time" label="Vreme obroka:" />
-    <Input
-      type="text"
-      label="Naručilac:"
-      placeholder="Unesite naziv naručioca"
-    />
-    <Input type="email" placeholder="Unestite e-mail" label="E-mail:" />
-  </div><div class="grid grid-2 meals">
-    {
-      meals.map((meal) => (
-        <ButtonCard
-          heading={meal.heading}
-          options={meal.options}
-          dropdowns={meal.dropdowns}
-          prices={meal.prices}
-        />
-      ))
-    }
-  </div>
-  <p>Sve cene su sa uračunatim PDV-om.</p>
-  <p>{paragraphes[0]}</p>
+  <MealForm meals={meals} paragraphes={paragraphes} client:load/>
   <br />
-  <Input type="textarea" label="Napomena:" />
-  <br />
-
   <p>NAPOMENA:</p>
   <p>
     {paragraphes[1]}
   </p>
 </Layout>
-<style>
-  .meals {
-    margin: 5rem 0;
-  }
-  @media (max-width: 768px) {
-    .grid-2 {
-      grid-template-columns: 1fr;
-      gap: 2rem;
-    }
-  }
-</style>
+ 
+ 
