--- a/src/styles/Dropdown.css
+++ b/src/styles/Dropdown.css
@@ -20,6 +20,7 @@
 .dropdown-btn:hover {
   border-color: var(--hover);
   color: var(--hover);
+  background-color: transparent;
 }
 .dropdown-btn:hover .arrow {
   background-color: var(--hover);
@@ -38,7 +39,6 @@
   border: 1px solid var(--border-form);
   border-top: none;
   width: 100%;
-
 }
 
 .dropdown-content button {
@@ -50,9 +50,7 @@
   text-align: left;
 }
 .dropdown-content button:hover {
-  
   color: var(--hover);
-  
 }
 
 .arrow {
