fix grid on phones

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -97,10 +97,13 @@ const mainLinks = ['o nama', 'ulaznice', 'kupovina grupnih karata', 'kontakt']
     .grid {
       gap: 0.5rem;
       margin: 0.5rem 0;
-      grid-template-columns: 1fr !important;
-    }
+     }
     main {
       min-height: calc(100vh - 10rem);
+    }
+
+    .meals {
+      grid-template-columns: 1fr !important;
     }
     
   }
