--- a/src/pages/kupovina-grupnih-karata.astro
+++ b/src/pages/kupovina-grupnih-karata.astro
@@ -35,6 +35,9 @@ const remarkSecond =
     margin-top: 5rem;
   }
   @media (max-width: 768px) {
+    h1 {
+      margin: 2rem 0
+    }
     .grid-2 {
       grid-template-columns: 1fr;
     }
